[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Walls.tscn" type="PackedScene" id=2]
[ext_resource path="res://RightOut.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scores.tscn" type="PackedScene" id=4]
[ext_resource path="res://LeftOut.tscn" type="PackedScene" id=5]
[ext_resource path="res://Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://WhimsyBot.tscn" type="PackedScene" id=7]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" parent="." instance=ExtResource( 4 )]

[node name="Walls" parent="." instance=ExtResource( 2 )]

[node name="LeftOut" parent="." instance=ExtResource( 5 )]

[node name="RightOut" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 6 )]

[node name="WhimsyBot" parent="." instance=ExtResource( 7 )]
